<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/bLogin"
        android:title="@string/login"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/bLogout"
        android:title="@string/logout"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item android:id="@+id/bRegister"
        android:title="@string/register"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/addClassButton"
        android:title="@string/title_activity_add_class"
        android:orderInCategory="1"
        app:showAsAction="always" />

</menu>
